# dualpy

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/differentiation/: index.html
docs/: getting-started.md  index.md  supported-operations.md
docs/api/: differentiation.md
getting-started/: index.html
search/: search_index.json
src/dualpy/: __init__.py  differentiation.py
src/dualpy/core/: __init__.py  dual.py  registry.py
src/dualpy/routines/: __init__.py  construction.py  linalg.py  numerical.py  reductions.py  searching.py  shape.py
src/dualpy/ufuncs/: __init__.py  comparison.py  elementary.py  exp_log.py  hyperbolic.py  logical.py  rounding.py  trigonometric.py
supported-operations/: index.html
tests/: conftest.py
tests/functional/: test_real_world.py
tests/integration/: test_argnums.py  test_compose.py  test_differentiation.py  test_registration.py
tests/unit/: test_construction.py  test_dual_array.py  test_linalg.py  test_logical.py  test_numerical.py  test_reductions.py  test_rounding.py  test_searching.py  test_shape.py  test_ufuncs.py
